--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,3 +31,32 @@ services:
       options:
         max-size: "5m"
         max-file: "2"
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-app
+    restart: unless-stopped
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/html:/usr/share/nginx/html:ro
+      - ./nginx/conf/nginx.conf:/etc/nginx/nginx.conf:ro
+    deploy:
+      resources:
+        limits:
+          memory: 50M
+          cpus: '0.25'
+        reservations:
+          memory: 25M
+          cpus: '0.1'
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "5m"
+        max-file: "2"
